--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "openai-php/client": "^0.17.1",
         "spatie/browsershot": "^5.0",
         "spatie/laravel-pdf": "^1.8",
         "spatie/laravel-permission": "^6.21"
